Fix image sizing on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -279,6 +279,7 @@ $recipe-image-height: 80px;
         background-size: cover;
         align-self: stretch;
         background-position: center;
+        flex: none;
     }
 }
 
